# netsync

./: Cargo.toml  LICENSE  README.md  TODO.md
.github/workflows/: rust.yml
src/: master.rs  server.rs  slave.rs
src/client/: mod.rs
src/commands/: commands.rs  mod.rs
src/logger/: mod.rs
src/server/: heartbeat.rs  mod.rs  repl.rs  server.rs
src/watcher/: mod.rs
