[package]
name = "netsync"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive", "env"] }
env_logger = "0.11.7"
log = "0.4.26"
notify = "8.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[[bin]]
name = "master"
path = "src/master.rs"

[[bin]]
name = "slave"
path = "src/slave.rs"
